2004-04-06  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-folder-summary.h (CAMEL_FOLDER_SUMMARY_TYPE): Defined.

	* camel-object.h (CAMEL_OBJECT_TYPE): Fixed.

	* providers/imap4/camel-imap4-folder.c
	(camel_imap4_folder_utf7_name): Implemented.

	* providers/imap4/camel-imap4-store.c (imap4_build_folder_info):
	Use camel_folder_info_build() to build the folder-info tree.

2004-04-06  Not Zed  <NotZed@Ximian.com>

	* camel-debug.c: #if 0 out the sys/debugreg stuff.

	** See bug #56110.

	* providers/imap/camel-imap-folder.c (get_content): more debug!
	(get_content): if we have no content-type header set on a sub-part
	of a multipart/digest, then we need to set it to message/rfc822 as
	in the multipart/digest rfc (2046 or so?).

	* camel-folder.c (camel_folder_get_message): output this stuff as
	folder debug.

	* providers/imap/camel-imap-folder.c (imap_get_message): add some
	imap:folder debug.
	(get_content): get xx.TEXT rather than xx if we're from a message
	parent part.

	** See bug #56464.

	* camel-folder.c (camel_folder_transfer_messages_to): do not lock
	the source here.
	(transfer_message_to): call the main entry point for get message
	and append message.

	** See bug #56050.

	* camel-vee-store.c (vee_delete_folder): delete the state file if
	it exists.

	* camel-object.c (camel_object_state_write): create the parent dir
	if we need to.  Also spit a warning if we fail in the end.

	* camel-vee-folder.c (camel_vee_folder_new): set the persistent
	state file location.
	(vee_sync): write the state file when we sync.

2004-04-05  Not Zed  <NotZed@Ximian.com>

	* providers/imap/camel-imap-store.c (get_folders): dont add
	folders to folders_out here, only in get_folders_add_folders.

	* camel-store.c (camel_folder_info_build): simplify 'list append'
	since we have next pointer at the head of the struct.

	* providers/imap/camel-imap-store.c (create_folder): fixed
	"containes" spelling count.
	(get_folder_online): "